--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "expence-tracker-react",
-  "homepage": "https://mohdshanin.github.io/Expance-Tracker/",
+  "homepage": "https://mohdshanin.github.io/Expanse-Tracker/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
-    "gh-pages": "^3.1.0",
+    "gh-pages": "^6.2.0",
+    "postcss": "^8.4.14",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
