--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "expence-tracker-react",
-  "homepage": "https://mohdshanin.github.io/Expanse-Tracker/",
+  "homepage": "https://mohdshanin.github.io/Expense-Tracker/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
