--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "expence-tracker-react",
+  "name": "expense-tracker",
   "homepage": "https://mohdshanin.github.io/Expense-Tracker/",
   "version": "0.1.0",
   "private": true,
